# parser_proj

./: README.md  pyproject.toml
src/: get_content.py  main.py  saver.py  utils.py  vacancy.json  vacancy.py  vacancy.txt
test/: dict.py
units/: abstract.py  job.py
