[tool.poetry]
name = "python-parser"
version = "0.1.0"
description = ""
authors = ["glebk <glebkot57@gmail.com>"]
readme = "README.md"
packages = [{include = "python_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
build = "^0.10.0"
requests = "^2.31.0"
saver = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
